# NH-ICBS-HLC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  config.json  eval_results_for_all.sh  execute_all_jobs.sh  jobs.sh  jobs2.sh  proxy_state_graph.json  proxy_state_nodes.json
animation_tools/: animate_collision_data.py  animate_driving.py  animate_driving_pyglet.py  animate_driving_v2.py  make_vid.sh
completed/: eval_config_two_vels_job.sh
constraint_definition/experiment_2/: config.json  unreachable_configs.json
constraint_definition/experiment_3/: unreachable_config copy.json
constraint_definition/experiment_3b/: unenterable.json  unleaveable.json  unreachable_configs.json
constraint_definition/experiment_4/: config.json  infeasible_dual_close_configs_20230501185710.json
decent_demo_data_1/: node0.json  node1.json  node100000.json  node2.json  node3.json
decent_demo_data_2/: node0.json  node1.json  node2.json
experiment_set_1/: experiments.json  experiments2.json  results.json
experiment_set_2/: results.json
experiment_set_3_b/: experiments.json  pose_data.json
experiment_set_4/4_a/: experiments.json  results.json
experiment_set_4/4_b/: results.json
experiment_set_4/4_c_2/: config.json  experiments.json
experiment_set_5/: experiments.json
include/: Config.hpp
include/Collision/: BoundingBox.hpp  CircleApproximation.hpp  CollisionDetectBase.hpp  Old.x_hpp  SeperatingAxis.hpp  SweepAndPrune.hpp  SweepAndPrune.x_hpp
include/DynamicsModel/: SingleTrackModel.hpp  TwoTrackModel.hpp
include/Interface/: HLCInterface.hpp
include/MPCompute/: MPBruteforce.hpp  MPCompute.hpp  MPNLOpt.hpp  MPNLOptCTH.hpp  MPNLOptParameters.hpp  MPNLOptSingle.hpp  MPNLOptSingleDualStage.hpp  MPReedSheep.hpp
include/MPComputeNL/: MPNLOpt.hpp  MPNLOptParameters.hpp  MPNLOptSingle.hpp  MPNLOptStagedMultiStart.hpp
include/Planner/: AStarExt.hpp  CBSPlanner.hpp  DirectedSearchProxy.hpp  ICTSPlanner.hpp  Logger.hpp  MAA.hpp  PlannerBase.hpp  ProxyGraph.hpp  ProxyGraphDirectedSearch.hpp  SimplePlanner.hpp  StateGraph.hpp
include/util/: Config.hpp  Pose.hpp  Profiler.hpp  SearchTree.hpp  State.hpp  ThreadPool.hpp  Visualisation.hpp
jobs/: enterable_leavable_job.sh
mp_long_process_12_3_10_st05_acc/: mp_state_graph.json
mp_long_process_12_3_5_st02/: config.json
mp_long_process_12_3_5_st03/: config.json
mp_long_process_12_3_5_st03_acc/: config.json
mp_long_process_12_3_7_st02/: config.json
mp_long_process_8_3_5_st05_acc/: config.json  mp_state_graph.json
mp_long_process_8_3_7.0/: config.json
mp_sets/mp_long_process_12_3_10_st05_acc/: config.json
mp_sets/mp_long_process_12_3_7_st02/: mp_state_graph.json
mp_sets/mp_long_process_16_3_5_st05_acc/: config.json
mp_sets/mp_long_process_8_3_3_st05_acc/: config.json
mp_sets/mp_long_process_8_3_7_st02/: config.json
mp_sets/mp_long_process_8_3_7_st03/: config.json
mp_sets/mp_short_process_12_3_4_st05_acc/: config.json
mp_sets/mp_short_process_24_3_3_st05_acc/: config.json
perf_tests/t0/: experiments.json
perf_tests/t1/: experiments.json
perf_tests/t3/: experiments.json
perf_tests_demo/: collision_in_node0.json  collision_in_node1.json  collision_in_node11.json  collision_in_node2.json  collision_in_node3.json  collision_in_node4.json  collision_in_node5.json  collision_in_node6.json  collision_in_node7.json  collision_in_node8.json  collision_in_node9.json  config.json  debug_collision_0_0_0_0.json  experiments.json  node0.json  node1.json  node10.json  node11.json  node2.json  node3.json  node4.json  node5.json  node6.json  node7.json  node8.json  node9.json  results.json
perf_tests_disc/r1/: experiments.json
perf_tests_disc/r2/: experiments.json
perf_tests_disc_set1/r3/: experiments.json
perf_tests_disc_set2/W2/: config.json
perf_tests_disc_set2/W3/: experiments.json
perf_tests_disc_set2/W4/: config.json  rectangle.json
perf_tests_disc_set2/W5/: config.json
perf_tests_disc_set3/T1/: experiments.json  rectangle.json
perf_tests_disc_set3/T10/: config.json  experiments.json
perf_tests_disc_set3/T11/: experiments.json  results.json
perf_tests_disc_set3/T2/: config.json  mp_state_graph.json
perf_tests_disc_set3/T3/: experiments.json
perf_tests_disc_set3/T4/: experiments.json  results.json
perf_tests_disc_set3/T5/: config.json  experiments.json
perf_tests_disc_set3/T6/: config.json  experiments.json
perf_tests_disc_set3/T8/: config.json  experiments.json
perf_tests_disc_set3/T9/: experiments.json  results.json
perf_tests_exps/t00/: experiments.json  results.json
perf_tests_exps/t01/: experiments.json
perf_tests_exps/t02/: experiments.json
perf_tests_exps/t03/: experiments.json
perf_tests_exps/t04/: experiments.json
perf_tests_exps/t05/: experiments.json
perf_tests_exps/t06/: experiments.json
perf_tests_exps/t07/: experiments.json
perf_tests_exps/t08/: experiments.json
perf_tests_exps/t09/: experiments.json
perf_tests_exps/t10/: experiments.json
perf_tests_exps/t2/: experiments.json
perf_tests_exps/t4/: experiments.json
perf_tests_exps/t7/: experiments.json
perf_tests_exps_2/V1/: experiment.json  results.json
perf_tests_exps_2/V10/: experiment.json
perf_tests_exps_2/V11/: experiment.json
perf_tests_exps_2/V12/: experiment.json
perf_tests_exps_2/V13/: experiment.json
perf_tests_exps_2/V14/: experiment.json
perf_tests_exps_2/V15/: experiment.json
perf_tests_feas/: order_for_start_distance.json  order_for_stop_distance.json
src/: Config.cpp  main.cpp
validation/: check_cbs_tree.py  generate_compact_formulation_from_configs.py  generate_experiments_from_poses.py  generate_experiments_ud.py  generate_experiments_ud_restrictions.py  generate_experiments_ud_restrictions_exact.py  generate_experiments_uniformly_distributed.py  resample_experiments.py
visualization/: viz_astar.py  viz_cbs_result.py  viz_curves.py  viz_motion_primitives.py  viz_motion_primitives_by_angle.py  viz_parameter_result.py  viz_points.py  viz_state_graph.py  viz_state_graph_single.py  viz_state_map.py  viz_visited_nodes.py
(+225 files in other folders)
